--- a/public_html/index.html
+++ b/public_html/index.html
@@ -94,24 +94,26 @@ and open the template in the editor.
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col-sm-4 work-grid">
                         <div class="item hover-grid-item">
-                            <img src="images/w2.jpg" title="name">
+                            <img src="images/reference/anubis.jpg" title="name">
                             <div class="caption" style="display: none;">
-                                <h2>Ar Aplikace</h2>
-                                <p>Aplikace, která dokáže rozeznávat Aruco Markery.</p>
+                                <h2>Čajovna Anubis</h2>
+                                <p>Webová stránka pro čajovnu, která se nachází v Ostravě-Porubě</p>
+                                <a class="alert-link" target="_blank" href="http://anubis.jecool.net/index.php">Anubis</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4 work-grid">
-                        <div class="item hover-grid-item">
-                            <img src="images/w3.jpg" title="name">
-                            <div class="caption" style="display: none;">
-                                <h2>Some Title</h2>
-                                <p>This is a caption to end all captions</p>
+                            <div class="item hover-grid-item">
+                                <img src="images/reference/arMarker.png" title="name">
+                                <div class="caption" style="display: none;">
+                                    <h2>Ar Aplikace</h2>
+                                    <p>Aplikace, která dokáže rozeznávat Aruco Markery.</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
                     <div class="clearfix"> </div>
                 </div>
@@ -135,6 +137,8 @@ and open the template in the editor.
                         <h3>Petr Noga</h3>
                         <span>Student</span>
                         <ul class="social-network social-circle unstyled-list list-inline">
+                            <li><a href="mailto:n.skypo@gmail.com" target="_blank" class="icoGmail" title="Gmail"><i class="fa fa-envelope"></i></a></li>
+                                
                             <li><a href="https://www.linkedin.com/in/petr-noga-5a6aa6124/" target="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="https://www.instagram.com/k3ishadow/" target="_blank" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
                             <div class="clearfix"> </div>
