--- a/public_html/index.html
+++ b/public_html/index.html
@@ -19,7 +19,7 @@ and open the template in the editor.
     <script type="text/javascript" src="js/myScript.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-
+    <script src="js/jquery.hoverGrid.js"></script>
     <script type="text/javascript" src="js/easing.js"></script>
     <link rel="stylesheet" type="text/css" href="css/jquery.hoverGrid.css">
 </head>
@@ -67,7 +67,7 @@ and open the template in the editor.
             </div>
         </div>
     </div>
-
+ <!--works-->
     <div id="work" class="work">
         <div id="work1" class="container">
             <div class="head-one text-center">
@@ -75,11 +75,7 @@ and open the template in the editor.
                 <span> </span>
                 <p>Webové stránky, aplikace na mobilní telefon.</p>
             </div>
-            <!--works-->
-            <!--images-hover-effects-->
-            <script src="js/jquery.hoverGrid.js"></script>
-
-            <!--images-hover-effects-->
+           
             <div class="works">
                 <div id="whatever" class="hover-grid">
                     <div class="col-sm-4 work-grid">
@@ -117,6 +113,7 @@ and open the template in the editor.
                     <div class="clearfix"> </div>
                 </div>
             </div>
+
             <div class="clearfix"> </div>
         </div>
     </div>
@@ -142,8 +139,7 @@ and open the template in the editor.
                                 </li>
 
                                 <li>
-                                    <a href="https://www.linkedin.com/in/petr-noga-5a6aa6124/" target="_blank" class="icoLinkedin"
-                                        title="Linkedin">
+                                    <a href="https://www.linkedin.com/in/petr-noga-5a6aa6124/" target="_blank" class="icoLinkedin" title="Linkedin">
                                         <i class="fa fa-linkedin"></i>
                                     </a>
                                 </li>
@@ -208,12 +204,8 @@ and open the template in the editor.
     </div>
 
     <div class="footer">
-        <div class="container">
-            <div class="footer-left">
-                <p>
-                    <span>Adress:</span> Ostrava</p>
-            </div>
-            <div class="footer-right">
+        <div class="container">          
+            <div class="text-center">
                 <p>Petr Noga </p>
             </div>
             <div class="clearfix"> </div>
