--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,10 @@ and open the template in the editor.
     <title>My Blog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Vítejte na mém webu, jsem studentem a zde vám chci představit co jsem vytvořil">
+    <meta name="keywords" content="Opencv,Android,Aruco,Weather,Blog,Photograph,Website,Webové stránky, ArucoMarkery">
+    <meta name="author" content="Petr Noga">
+
 
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -41,7 +45,7 @@ and open the template in the editor.
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <nav class="navbar navbar-light bg-light">
-                <a class="navbar-brand" href="#">KeiShadow blog</a>
+                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="logo" height="38px"></a>
             </nav>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarNav"
                 aria-expanded="false" aria-label="Toggle navigation">
