Změny v css Media pro responzivnost.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -175,6 +175,16 @@ and open the template in the editor.
                             </div>
                         </div>
                     </div>
+                    <div class="col-sm-4 work-grid">
+                        <div class="item hover-grid-item">
+                            <img src="images/reference/cloudSnow.svg" height="250px" title="name">
+                            <div class="caption" style="display: none;">
+                                <h2>Počasí</h2>
+                                <p>Webová stránka, na kontrolu počasí.</p>
+                                <a class="alert-link" target="_blank" href="http://homel.vsb.cz/~nog0030/weathersite/index.html">Počasí</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="clearfix"> </div>
                 </div>
             </div>
