úprava css pro responzivní web(Banner)

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -84,10 +84,10 @@ and open the template in the editor.
 
 
     <div class="banner text-center">
-            <div class="container">
+            
                 <div class="banner-info">
                     <h1>
-                        <span>Osobní</span> blog</h1>
+                        <span>Vítejte na mém</span> Osobním blogu</h1>
                     <p>Vyvíjím webové aplikace, webové stránky, aplikace pro mobilní telefony Android. </p>
                     <label class="page-scroll">
                         <a class="big-btn" href="#work1">
@@ -95,7 +95,7 @@ and open the template in the editor.
                         </a>
                     </label>
                 </div>
-            </div>
+          
         </div>
 
 
