--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html lang="cs">
 
 <head>
-    <title>My Blog</title>
+    <title>Petr Noga</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Vítejte na mém webu, jsem studentem a zde vám chci představit co jsem vytvořil">
@@ -22,13 +22,18 @@ and open the template in the editor.
 
     <link rel="stylesheet" type="text/css" href="css/jquery.hoverGrid.css">
 
+    <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+    <!-- or -->
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
         crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="js/myScript.js"></script>
-
+    <script type="text/javascript" src="js/jquery.viewportchecker.min.js"></script>
     <script src="js/jquery.hoverGrid.js"></script>
     <script type="text/javascript" src="js/easing.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
@@ -44,43 +49,46 @@ and open the template in the editor.
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <nav class="navbar navbar-light bg-light">
-                <a class="navbar-brand" href="#">
-                    <img src="images/logo.png" alt="logo" height="38px">
-                </a>
-            </nav>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarNav"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="nav navbar-nav ml-auto ">
-                    <li class="nav-item active">
-                        <a class="nav-link scroll" href="#home">Domů
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link scroll" href="#work">Má práce</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link scroll" href="#me">O mně</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Články
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="blog/armarker.html">Detekce markerů</a>
-                            <a class="dropdown-item" href="#">Počasí web</a>
+            <div class="container">
+                    <nav class="navbar navbar-light bg-light">
+                            <a class="navbar-brand" href="#">
+                                <img src="images/logo.png" alt="logo" height="38px">
+                            </a>
+                        </nav>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarNav"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="nav navbar-nav ml-auto ">
+                                <li class="nav-item ">
+                                    <a class="nav-link scroll" href="#home">Domů
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class=" nav-link scroll"  href="#work">Reference</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link scroll"  href="#me">O mně</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Blog
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="blog/armarker.html">Detekce markerů</a>
+                                        <a class="dropdown-item" href="blog/citron.html">Vyhledávání letů </a>
+                                        <a class="dropdown-item" href="weathersite/index.html">Počasí web</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link scroll" href="#contact">Kontakty</a>
+                                </li>
+                            </ul>
+            
                         </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link scroll" href="#contact">Kontakty</a>
-                    </li>
-                </ul>
-
             </div>
+           
         </nav>
     </header>
 
@@ -90,7 +98,7 @@ and open the template in the editor.
         <div class="banner-info">
             <h1>
                 <span>Vítejte na mém</span> Osobním blogu</h1>
-            <p>Vyvíjím webové aplikace, webové stránky, aplikace pro mobilní telefony Android. </p>
+            <p class="halfods">Vyvíjím webové aplikace, webové stránky, aplikace pro mobilní telefony Android. </p>
             <label class="page-scroll">
                 <a class="big-btn" href="#work1">
                     <span> </span>
@@ -108,13 +116,13 @@ and open the template in the editor.
 
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="images/Uvod/android.png" alt="Android">
+                <img class="d-block w-100" src="images/uvod/android.png" alt="Android">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="images/Uvod/code.jpg" alt="Code">
+                <img class="d-block w-100" src="images/uvod/code.jpg" alt="Code">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="images/Uvod/augmentedr.png" alt="Augmented Reality">
+                <img class="d-block w-100" src="images/uvod/augmentedr.png" alt="Augmented Reality">
             </div>
         </div>
 
@@ -129,10 +137,10 @@ and open the template in the editor.
     </div>
 
     <!--works-->
-    <div id="work" class="work">
+    <section id="work" class="work post">
         <div id="work1" class="container">
             <div class="head-one text-center">
-                <h2>Má práce</h2>
+                <h2>Reference</h2>
                 <span> </span>
                 <p>Webové stránky, aplikace na mobilní telefon.</p>
             </div>
@@ -181,22 +189,32 @@ and open the template in the editor.
                             </div>
                         </div>
                     </div>
+                    <div class="col-sm-4 work-grid">
+                            <div class="item hover-grid-item">
+                                <img src="images/reference/citron.png" height="250" title="name">
+                                <div class="caption" style="display: none;">
+                                    <h2>Citron vyhledávání letenek.</h2>
+                                    <p>Fáze 2 projektu do Vývoje internetových aplikací. Inspiroval jsem se stránkou KIWI.COM</p>
+                                    <a class="alert-link" target="_blank" href="http://homel.vsb.cz/~nog0030/citron/index.html">Citron</a>
+                                </div>
+                            </div>
+                        </div>
                     <div class="clearfix"> </div>
                 </div>
             </div>
             <div class="clearfix"> </div>
         </div>
-    </div>
+    </section>
 
-    <div id="me" class="me">
+    <section id="me" class="me post">
         <div class="container">
             <div class="head-one text-center me-head">
                 <h2>O mně</h2>
             </div>
             <!--About me-->
-            <div class="me-members">
+            <div class="me-members ">
                 <div class="row">
-                    <div class="col-sm-4 m-auto ">
+                    <div id="mePhotoBox" class="col-sm-4 m-auto post2 ">
                         <div class="me-member me-height  text-center">
                             <img class="t-pic" src="images/petrnoga.jpg" width="200" title="Petr Noga">
                             <h3>Petr Noga</h3>
@@ -224,7 +242,7 @@ and open the template in the editor.
 
                     </div>
 
-                    <div class="col-sm-4 m-auto">
+                    <div id="meTextBox" class="col-sm-4 m-auto post3">
                         <div class="card me-height">
                             <div class="card-body">
                                 <p>Jsem studentem Vysoké školy Báňské, studuji Informační techonologie.
@@ -247,10 +265,10 @@ and open the template in the editor.
             </div>
             <!--//team-members-->
         </div>
-    </div>
+    </section>
 
-    <div id="contact" class="contact">
-        <div class="container">
+    <section id="contact" class="contact ">
+        <div class="container post">
             <div class="head-one text-center">
                 <h2>Kontakty</h2>
                 <span> </span>
@@ -274,18 +292,18 @@ and open the template in the editor.
             </div>
 
         </div>
-    </div>
+    </section>
 
 
 
-    <div class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="text-center">
                 <p>Petr Noga </p>
             </div>
             <div class="clearfix"> </div>
         </div>
-    </div>
+    </footer>
 </body>
 
 </html>
